--- a/index.html
+++ b/index.html
@@ -83,19 +83,19 @@
         <div class="skills-wrapper">
           <div class="first-set animate__animated animate__pulse">
             <img
-              src="icons/c++.png"
+              src="c++.png"
               alt=""
               loading="lazy"
               class="icon icon-card"
             />
             <img
-              src="icons/ml.jpg"
+              src="ml.jpg"
               alt=""
               loading="lazy"
               class="icon icon-card"
             />
             <img
-              src="icons/dl.jpg"
+              src="dl.jpg"
               alt=""
               loading="lazy"
               class="icon icon-card"
@@ -104,19 +104,19 @@
   
           <div class="second-set animate__animated animate__pulse">
             <img
-              src="icons/python.png"
+              src="python.png"
               alt=""
               loading="lazy"
               class="icon icon-card"
             />
             <img
-              src="icons/Power-BI-Logo.png"
+              src="Power-BI-Logo.png"
               alt=""
               loading="lazy"
               class="icon icon-card"
             />
             <img
-              src="icons/sql.png"
+              src="sql.png"
               alt=""
               loading="lazy"
               class="icon icon-card"
