--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <!-- Hero Section -->
     <section class="hero" id="about">
         <img
-          src="photos/yuvi1__2_-removebg-preview.png"
+          src="yuvi1__2_-removebg-preview.png"
           alt="Yuvraj Singh"
           loading="lazy"
           class="hero-img"
@@ -131,7 +131,7 @@
         <div class="projects-container">
           <div class="project-container project-card">
             <img
-              src="photos/dp.png"
+              src="dp.png"
               alt="Disease Prediction Using ML Techniques"
               loading="lazy"
               class="project-pic"
@@ -142,11 +142,11 @@
               ratione vel inventore labore commodi modi quos culpa aut saepe!
               Alias!
             </p>
-            <a href="pdf/researchpaper21 (1).pdf" target="_blank" class="project-link">Check it Out</a>
+            <a href="researchpaper21 (1).pdf" target="_blank" class="project-link">Check it Out</a>
           </div>
           <div class="project-container project-card">
             <img
-              src="photos/peopletracking.jpg"
+              src="peopletracking.jpg"
               alt="People Tracking System Using Deep Learning"
               loading="lazy"
               class="project-pic"
@@ -232,27 +232,27 @@
     <div class="socials">
         <a href="#" target="_blank"
           ><img
-            src="icons/twitter.png"
+            src="twitter.png"
             alt="Twitter"
             loading="lazy"
             class="socicon"
         /></a>
         <a href="https://www.instagram.com/yuvrajrathour83/?next=%2F&hl=en" target="_blank"
           ><img
-            src="icons/insta.jpeg"
+            src="insta.jpeg"
             alt="Instagram"
             loading="lazy"
             class="socicon"
         /></a>
         <a href="https://www.linkedin.com/in/yuvraj-singh-147905212/" target="_blank"
           ><img
-            src="icons/linkedin.svg"
+            src="linkedin.svg"
             alt="Linkedin"
             loading="lazy"
             class="socicon"
         /></a>
         <a href="https://github.com/yuvraj9056" target="_blank"
-          ><img src="icons/github.png" alt="Github" class="socicon"
+          ><img src="github.png" alt="Github" class="socicon"
         /></a>
 
     <!-- Scroll to top -->
