--- a/index.html
+++ b/index.html
@@ -138,9 +138,8 @@
             />
             <h3 class="project-title">Disease Prediction Using ML Techniques</h3>
             <p class="project-details">
-              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quas
-              ratione vel inventore labore commodi modi quos culpa aut saepe!
-              Alias!
+              Developed a disease prediction system using machine learning to analyze medical data, enabling early
+detection and accurate forecasting of health conditions for proactive medical interventions.
             </p>
             <a href="researchpaper21 (1).pdf" target="_blank" class="project-link">Check it Out</a>
           </div>
@@ -153,9 +152,8 @@
             />
             <h3 class="project-title">People Tracking System Using Deep Learning</h3>
             <p class="project-details">
-              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quas
-              ratione vel inventore labore commodi modi quos culpa aut saepe!
-              Alias!
+              The "People Tracking using Deep Learning" project employs advanced neural network models to analyze and
+monitor the movement of individuals within a given environment.
             </p>
             <a href="#" target="_blank" class="project-link">Check it Out</a>
           </div>
